# DatsSol

./: .env.example  .gitignore  DEPLOY_PROD.md  Makefile  README.md  datssol_codex_strategy.md  datssol_postmortem_fixspec_v2.md  docker-compose.yml
analysis/: successful_moves_by_round_summary.json  test_leaderboard_comparison.json  test_round_postmortem.md  test_round_postmortem_data.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/planning/: analyze.py  decide.py  execute.py  geometry.py  memory.py  strategy_registry.py
backend/app/providers/: base.py  datsol_live.py  datsol_mock.py  factory.py
backend/app/schemas/: game.py
backend/app/services/: runtime.py  stats_tracker.py
backend/dats_sol_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_planning.py
docs/research/: 2024-datsblack-notes.md  datssol-strategy.md  stack-and-assets.md  strategy-playbook.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  App.vue.js  main.js  main.ts  styles.css
frontend/src/api/: client.js  client.ts
frontend/src/components/control/: ControlPanel.vue  (+1 more)
frontend/src/router/: index.js  index.ts
frontend/src/stores/: commandCenter.js  commandCenter.ts
frontend/src/types/: game.ts
frontend/src/views/: LogsView.vue  LogsView.vue.js  VisualizationView.vue  VisualizationView.vue.js
(+14 files in other folders)
